# controllers/items.go
@@ -79,8 +79,14 @@ func (c *ItemsController) Post() {
 				country, _ := models.GetCountriesByCode(t.Country)
 				branch, _ := models.GetBranchesById(t.Branch)
 
+				status := models.Status{}
+
+				if status_, err := models.GetStatusByName("GOOD"); err == nil {
+					status = *status_
+				}
+
 				// Add item if getting category and price addition does not result in an error
-				v := models.Items{ItemName: t.ItemName, Description: t.Description, Weight: t.Weight, Category: p, ItemPrice: &it, AvailableSizes: aSizes, AvailableColors: aColors, Quantity: t.Quantity, Country: country, Branch: branch, Active: 1, DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: creator, ModifiedBy: creator}
+				v := models.Items{ItemName: t.ItemName, Description: t.Description, Weight: t.Weight, Category: p, ItemPrice: &it, AvailableSizes: aSizes, AvailableColors: aColors, Quantity: t.Quantity, Country: country, Branch: branch, Active: 1, DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: creator, ModifiedBy: creator, Status: &status}
 
 				if _, err := models.AddItems(&v); err == nil {
 					// Add quantity for item
