# structs/requests/reviewRequestDTO.go
@@ -1,7 +1,9 @@
 package requests
 
 type AddReviewRequest struct {
-	Review   string
-	ReviewBy int64
-	Rating   float64
+	Review    string
+	ReviewBy  int64
+	ItemId    int64
+	Reference int64
+	Rating    float64
 }
